add trans for all non conditional content

--- a/grc/templates/document-checker/your-documents.html
+++ b/grc/templates/document-checker/your-documents.html
@@ -186,16 +186,16 @@
                 <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                            Statutory declaration for single applicants
+                            {{ _('Statutory declaration for single applicants') }}
                         </span>
                     </summary>
                     <div class="govuk-details__text">
                         <p class="govuk-body">
-                            Fill in and sign a
-                            <a href="https://www.gov.uk/government/publications/gender-recognition-certificate-statutory-declarations-for-applicants"
-                               target="_blank" class="govuk-link">
-                                statutory declaration (opens in a new tab)</a>.
-                            Follow the guidance to find out who can act as a witness when you sign your declaration.
+                            {{ _('Fill in and sign a') }}
+                            <a href="https://www.gov.uk/government/publications/gender-recognition-certificate-statutory-declarations-for-applicants" target="_blank" class="govuk-link">
+                            {{ _('statutory declaration (opens in a new tab)') }}
+                            </a>.
+                            {{ _('Follow the guidance to find out who can act as a witness when you sign your declaration') }}.
                         </p>
                     </div>
                 </details>
@@ -269,18 +269,16 @@
                 <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                            Death certificate for your spouse or civil partner
+                            {{ _('Death certificate for your spouse or civil partner') }}
                         </span>
                     </summary>
                     <div class="govuk-details__text">
                         <p class="govuk-body">
-                            Upload a death certificate for your partner if their death ended the
-                            marriage or civil partnership – you can
-                            <a href="https://www.gov.uk/order-copy-birth-death-marriage-certificate"
-                               target="_blank" class="govuk-link">
-                                order a death certificate (opens in a new tab)
+                            {{ _('Upload a death certificate for your partner if their death ended the marriage or civil partnership – you can') }}
+                            <a href="https://www.gov.uk/order-copy-birth-death-marriage-certificate" target="_blank" class="govuk-link">
+                            {{ _('order a death certificate (opens in a new tab)') }}
                             </a>
-                            if their death was registered in the UK.
+                            {{ _('if their death was registered in the UK') }}.
                         </p>
                     </div>
                 </details>
@@ -291,21 +289,19 @@
                 <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                            Decree absolute or final order
+                            {{ _('Decree absolute or final order') }}
                         </span>
                     </summary>
                     <div class="govuk-details__text">
                         <p class="govuk-body">
-                            Upload a scan or good quality photograph of your
-                            <a href="https://www.gov.uk/copy-decree-absolute-final-order"
-                               target="_blank" class="govuk-link">
-                                decree absolute or final order (opens in a new tab)
+                            {{ _('Upload a scan or good quality photograph of your') }}
+                            <a href="https://www.gov.uk/copy-decree-absolute-final-order" target="_blank" class="govuk-link">
+                            {{ _('decree absolute or final order (opens in a new tab)') }}
                             </a>
-                            to show the marriage or civil partnership has ended.
+                            {{ _('to show the marriage or civil partnership has ended') }}.
                         </p>
                         <p class="govuk-body">
-                            If you have been married or in a civil partnership more than once, you need a
-                            separate certificate for each marriage or civil partnership.
+                            {{ _('If you have been married or in a civil partnership more than once, you need a separate certificate for each marriage or civil partnership') }}.
                         </p>
                     </div>
                 </details>
@@ -316,25 +312,25 @@
                 <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                            Proof that your affirmed gender is recognised outside the UK
+                            {{ _('Proof that your affirmed gender is recognised outside the UK') }}
                         </span>
                     </summary>
                     <div class="govuk-details__text">
                         <p class="govuk-body">
-                            If your affirmed gender is already recognised in an
-                            <a href="https://www.gov.uk/government/publications/gender-recognition-certificate-list-of-approved-countries-and-territories"
-                               target="_blank" class="govuk-link">
-                                approved country or territory (opens in a new tab)</a>,
-                            you need a document that proves this.
+                            {{ _('If your affirmed gender is already recognised in an') }}
+                            <a href="https://www.gov.uk/government/publications/gender-recognition-certificate-list-of-approved-countries-and-territories" target="_blank" class="govuk-link">
+                            {{ _('approved country or territory (opens in a new tab)') }}
+                            </a>,
+                            {{ _('you need a document that proves this') }}.
                         </p>
                         <p class="govuk-body">
-                            The document could be:
+                            {{ _('The document could be') }}:
                         </p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>something that’s equal to a Gender Recognition Certificate</li>
-                            <li>an updated birth certificate</li>
-                            <li>a court order</li>
-                            <li>an entry in a legal register</li>
+                            <li>{{ _('something that’s equal to a Gender Recognition Certificate') }}</li>
+                            <li>{{ _('an updated birth certificate') }}</li>
+                            <li>{{ _('a court order') }}</li>
+                            <li>{{ _('an entry in a legal register') }}</li>
                         </ul>
                     </div>
                 </details>
@@ -342,67 +338,65 @@
 
 
             <h2 class="govuk-heading-m">
-                Documents to send by post
+                {{ _('Documents to send by post') }}
             </h2>
             <p class="govuk-body">
-                You should post the following documents after you have submitted your application.
+                {{ _('You should post the following documents after you have submitted your application') }}.
             </p>
 
             <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
-                        Birth or adoption certificate
+                        {{ _('Birth or adoption certificate') }}
                     </span>
                 </summary>
                 <div class="govuk-details__text">
                     <p class="govuk-body">
-                        Send an original or
-                        <a href="https://www.gov.uk/certifying-a-document"
-                           target="_blank" class="govuk-link">
-                            certified copy (opens in a new tab)
+                        {{ _('Send an original or') }}
+                        <a href="https://www.gov.uk/certifying-a-document" target="_blank" class="govuk-link">
+                        {{ _('certified copy (opens in a new tab)') }}
                         </a>
-                        of your full birth or adoption certificate.
-                        If your birth or adoption was registered in the UK, find out how to
-                        <a href="https://www.gov.uk/order-copy-birth-death-marriage-certificate"
-                           target="_blank" class="govuk-link">
-                            order a certificate (opens in a new tab)
+                        {{ _('of your full birth or adoption certificate') }}.
+                        {{ _('If your birth or adoption was registered in the UK, find out how to') }}
+                        <a href="https://www.gov.uk/order-copy-birth-death-marriage-certificate" target="_blank" class="govuk-link">
+                        {{ _('order a certificate (opens in a new tab)') }}
                         </a>
-                        if you do not have it available.
+                        {{ _('if you do not have it available') }}.
                     </p>
                 </div>
             </details>
 
 
             <h2 class="govuk-heading-m">
-                If any of your documents are not in English
+                {{ _('If any of your documents are not in English') }}
             </h2>
             <p class="govuk-body">
-                You’ll need to have your documents translated. The translator does not need to have
-                any qualifications, so the translation can be done by a friend or a family member.
+                {{ _('You’ll need to have your documents translated') }}.
+                {{ _('The translator does not need to have any qualifications, so the translation can be done by a friend or a family member') }}.
             </p>
             <p class="govuk-body">
-                Get the translator to sign the translated documents and
-                write down their translation qualifications if they have any.
+                {{ _('Get the translator to sign the translated documents and write down their translation qualifications if they have any') }}.
             </p>
             <p class="govuk-body">
-                You’ll need to send in both the original documents and the translations.
+                {{ _('You’ll need to send in both the original documents and the translations') }}.
             </p>
             <p class="govuk-body">
-                Once you have your documents ready you can
+                {{ _('Once you have your documents ready you can') }}
                 <a href="{{ url_for('startApplication.index') }}" class="govuk-link">
-                    apply for a Gender Recognition Certificate</a>.
+                {{ _('apply for a Gender Recognition Certificate') }}
+                </a>.
             </p>
 
 
             <h2 class="govuk-heading-m">
-                Get this list by email
+                {{ _('Get this list by email') }}
             </h2>
             <p class="govuk-body">
-                If you want us to email you the list of documents, please click this button.
+                {{ _('If you want us to email you the list of documents, please click this button') }}.
             </p>
             <form method="get" action="{{ url_for('documentChecker.askForEmailAddress') }}">
                 <button class="govuk-button" data-module="govuk-button">
-                    Email documents list
+                    {{ _('Email documents list') }}
                 </button>
             </form>
 
