add trans for service title

--- a/grc/templates/base.html
+++ b/grc/templates/base.html
@@ -63,7 +63,7 @@
             </div>
             <div class="govuk-header__content">
                 <a href="{{ url_for('startApplication.index') }}" class="govuk-header__link govuk-header__link--service-name">
-                    {% block serviceTitle %}Apply for a Gender Recognition Certificate{% endblock %}
+                    {% block serviceTitle %}{{ _('Apply for a Gender Recognition Certificate') }}{% endblock %}
                 </a>
             </div>
         </div>
