--- a/grc/templates/start-application/overseas-check.html
+++ b/grc/templates/start-application/overseas-check.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "govuk-design-system-templates/radios.html" as radios %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}Have you ever been issued a Gender Recognition Certificate (or its equivalent) in another country?{% endblock %}
+{% block title %}{{ _('Have you ever been issued a Gender Recognition Certificate (or its equivalent) in another country?') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ back }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderFor('startApplication.reference') }}
 {% endblock %}
 
 {% block content %}
@@ -20,15 +22,13 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='overseasCheck',
-                    question="Have you ever been issued a Gender Recognition Certificate (or its equivalent) in another country?",
+                    question=_("Have you ever been issued a Gender Recognition Certificate (or its equivalent) in another country?"),
                     radiosOptions={
                         'questionIsPageHeading': true
                     }
                 ) }}
 
-                <button class="govuk-button" data-module="govuk-button">
-                    Continue
-                </button>
+                {{ continue.renderFor() }}
             </form>
 
         </div>
