--- a/grc/templates/start-application/declaration.html
+++ b/grc/templates/start-application/declaration.html
@@ -37,7 +37,7 @@
                     form,
                     fieldName='consent',
                     question=_("Do you consent to the General Register Office contacting you about your application?"),
-                    label='I consent',
+                    label=_('I consent'),
                     checkboxOptions={
                         'questionClasses': 'govuk-fieldset__legend--m'
                     }
