moved list of countries to constants

--- a/grc/templates/start-application/overseas-approved-check.html
+++ b/grc/templates/start-application/overseas-approved-check.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "govuk-design-system-templates/radios.html" as radios %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}Gender recognition in approved countries and territories{% endblock %}
+{% block title %}{{ _('Gender recognition in approved countries and territories') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ back }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderForRawURL(back) }}
 {% endblock %}
 
 {% block content %}
@@ -15,73 +17,35 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                Gender recognition in approved countries and territories
+                {{ _('Gender recognition in approved countries and territories') }}
             </h1>
 
             <p class="govuk-body">
-                If you have ever been issued a Gender Recognition Certificate (or its equivalent) in an approved
-                country or territory, you will need to provide official documentation that shows this.
+                {{ _('If you have ever been issued a Gender Recognition Certificate (or its equivalent) in an approved country or territory, you will need to provide official documentation that shows this') }}.
             </p>
             <p class="govuk-body govuk-!-margin-bottom-1">
-                This could be:
+                {{ _('This could be') }}:
             </p>
             <ul class="govuk-list govuk-list--bullet">
-                <li>a document equal to a Gender Recognition Certificate</li>
-                <li>an updated birth certificate</li>
-                <li>a court order</li>
-                <li>an entry in a legal register</li>
+                <li>{{ _('a document equal to a Gender Recognition Certificate') }}</li>
+                <li>{{ _('an updated birth certificate') }}</li>
+                <li>{{ _('a court order') }}</li>
+                <li>{{ _('an entry in a legal register') }}</li>
             </ul>
             <p class="govuk-body govuk-!-margin-bottom-8">
-                If you have received gender recognition from somewhere else, or you can’t provide this documentation,
-                you will need to provide medical reports and evidence of living in your gender for 2 years instead.
+                {{ _('If you have received gender recognition from somewhere else, or you can’t provide this documentation, you will need to provide medical reports and evidence of living in your gender for 2 years instead') }}.
             </p>
 
             <h2 class="govuk-heading-m">
-                List of approved countries and territories
+                {{ _('List of approved countries and territories') }}
             </h2>
+            {% if countries %}
             <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
-                <li>Australia – not including the external territories</li>
-                <li>Austria</li>
-                <li>Belgium</li>
-                <li>Bulgaria</li>
-                <li>Canada – not including Northwest Territories and Nunavut</li>
-                <li>Croatia</li>
-                <li>Cyprus</li>
-                <li>Czech Republic</li>
-                <li>Denmark</li>
-                <li>Estonia</li>
-                <li>Finland</li>
-                <li>France</li>
-                <li>Germany</li>
-                <li>Greece</li>
-                <li>Iceland</li>
-                <li>Italy</li>
-                <li>Japan</li>
-                <li>Liechtenstein</li>
-                <li>Luxembourg</li>
-                <li>Malta</li>
-                <li>Federal District of Mexico</li>
-                <li>Moldova</li>
-                <li>Netherlands</li>
-                <li>New Zealand</li>
-                <li>Norway</li>
-                <li>Poland</li>
-                <li>Romania</li>
-                <li>Russian Federation</li>
-                <li>Serbia</li>
-                <li>Singapore</li>
-                <li>Slovakia</li>
-                <li>Slovenia</li>
-                <li>South Africa</li>
-                <li>South Korea</li>
-                <li>Spain</li>
-                <li>Sweden</li>
-                <li>Switzerland</li>
-                <li>Turkey</li>
-                <li>Ukraine</li>
-                <li>United States of America – not including Idaho, Ohio, Tennessee and Texas</li>
-                <li>Uruguay</li>
+                {% for country in countries %}
+                <li>{{ country }}</li>
+                {% endfor %}
             </ul>
+            {% endif %}
 
             <form method="POST" action="#">
                 {{ form.csrf_token }}
@@ -89,18 +53,16 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='overseasApprovedCheck',
-                    question="Do you have official documentation that shows you have ever been issued a Gender Recognition Certificate (or its equivalent) in one of these countries or territories?",
+                    question=_("Do you have official documentation that shows you have ever been issued a Gender Recognition Certificate (or its equivalent) in one of these countries or territories?"),
                     radiosOptions={
                         'questionClasses': 'govuk-fieldset__legend--m',
                         'hintOptions': {
-                            'htmlOrText': "Select ‘No’ if you have received gender recognition from somewhere else, or you can’t provide this documentation."
+                            'htmlOrText': _("Select ‘No’ if you have received gender recognition from somewhere else, or you can’t provide this documentation.")
                         }
                     }
                 ) }}
 
-                <button class="govuk-button" data-module="govuk-button">
-                    Continue
-                </button>
+                {{ continue.renderFor() }}
             </form>
 
         </div>
